--- a/reports/report7/report7.html
+++ b/reports/report7/report7.html
@@ -225,6 +225,11 @@ cv2.destroyAllWindows()
 				
 			</code></pre>
 		</p>
+
+		<p>Com os resultados, obtidos, podemos notar que o o modelo teve melhor desempenho para as fotos que 
+		envolviam seres humanos. As detecções não funcionaram nas imagens dos avatares do grupo. Além disso, 
+		o modelo Haarcascade Frontal Face teve um resultado melhor se comparado ao Haarcascade Fullbody,
+		conseguindo detectar os rostos de todos os integrantes do grupo.</p>
 		
 		<h2> 4.Resultados e Análises</h2>
 
