--- a/project/parte4/SPV_application_quiz.html
+++ b/project/parte4/SPV_application_quiz.html
@@ -12,8 +12,19 @@
 			<li>Ela deve aparecer recortada a direita, ao lado de uma carta de referencia e o tempo do processo de identificação </li> 
 		</ol>
 
+		<h1>Questionário Avaliativo (AQA)</h1>
 
-	  	<h1>Questionário Avaliativo (AQA)</h1>
+			<h2>1. Qual é o objetivo principal do programa de reconhecimento de cartas desenvolvido para o jogo 
+				Magic: The Gathering? </h2>
+
+ 				<p>a) Facilitar a troca de cartas entre jogadores.</p>
+ 				<p>b) Proporcionar uma experiência física do jogo Magic: The Gathering online.</p>
+ 				<p>c) Identificar as cartas utilizadas nas partidas online de forma efetiva e satisfatória.</p>
+ 				<p>d) Ajudar na criação de decks personalizados.</p>
+
+			
+
+	  	<h1>Questionário de Feedback</h1>
 
 			<h2>Introdução</h2>
 
