--- a/project/parte4/SPV_application_quiz.html
+++ b/project/parte4/SPV_application_quiz.html
@@ -14,15 +14,26 @@
 
 		<h1>Questionário Avaliativo (AQA)</h1>
 
-			<h2>1. Qual é o objetivo principal do programa de reconhecimento de cartas desenvolvido para o jogo 
-				Magic: The Gathering? </h2>
-
+			<p>1. Qual é o objetivo principal do programa de reconhecimento de cartas desenvolvido para o jogo 
+				Magic: The Gathering? </p>
  				<p>a) Facilitar a troca de cartas entre jogadores.</p>
  				<p>b) Proporcionar uma experiência física do jogo Magic: The Gathering online.</p>
  				<p>c) Identificar as cartas utilizadas nas partidas online de forma efetiva e satisfatória.</p>
  				<p>d) Ajudar na criação de decks personalizados.</p>
 
-			
+			<p>2. Como o programa de reconhecimento de cartas contribui para a integridade do jogo e evita trapaças?</p>
+ 				<p>Permite que os jogadores enviem mensagens secretas para seus oponentes.</p>
+ 				<p>Garante que os jogadores tenham acesso a informações detalhadas sobre seus oponentes.</p>
+ 				<p>Identifica automaticamente as cartas no tabuleiro, eliminando a necessidade de comunicação 
+					verbal sobre as jogadas.</p>
+ 				<p>Fornece um modo de jogo offline para evitar conexões de internet instáveis.</p>
+		
+			<p>5. Quais são os possíveis benefícios do programa de reconhecimento de cartas?</p>
+ 				<p>Redução da variedade de formatos de jogo.</p>
+ 				<p>Aumento da frustração dos jogadores devido a bugs.</p>
+ 				<p>Aumento da imersão, evitando a necessidade de identificar manualmente as cartas.</p>
+				<p> Diminuição da necessidade de estratégias durante as partidas.</p>
+
 
 	  	<h1>Questionário de Feedback</h1>
 
