--- a/project/parte4/SPV_application_quiz.html
+++ b/project/parte4/SPV_application_quiz.html
@@ -22,17 +22,31 @@
  				<p>d) Ajudar na criação de decks personalizados.</p>
 
 			<p>2. Como o programa de reconhecimento de cartas contribui para a integridade do jogo e evita trapaças?</p>
- 				<p>Permite que os jogadores enviem mensagens secretas para seus oponentes.</p>
- 				<p>Garante que os jogadores tenham acesso a informações detalhadas sobre seus oponentes.</p>
- 				<p>Identifica automaticamente as cartas no tabuleiro, eliminando a necessidade de comunicação 
+ 				<p>a) Permite que os jogadores enviem mensagens secretas para seus oponentes.</p>
+ 				<p>b) Garante que os jogadores tenham acesso a informações detalhadas sobre seus oponentes.</p>
+ 				<p>c) Identifica automaticamente as cartas no tabuleiro, eliminando a necessidade de comunicação 
 					verbal sobre as jogadas.</p>
- 				<p>Fornece um modo de jogo offline para evitar conexões de internet instáveis.</p>
-		
+ 				<p>d) Fornece um modo de jogo offline para evitar conexões de internet instáveis.</p>
+
+			<p>3. Qual é a principal vantagem de utilizar o programa de reconhecimento de cartas em comparação com a 
+				identificação manual das cartas?</p>
+ 				<p>a) Maior complexidade nas estratégias do jogo.</p>
+				<p>b) Aumento da interação física com as cartas.</p>
+				<p>c) Possibilidade de modificar as regras do jogo.</p>
+				<p>d) Agilidade na identificação das cartas, minimizando erros de interpretação.</p>
+
+			<p>4. Como o programa de reconhecimento de cartas contribui para a imersão dos jogadores nas partidas 
+				online?</p>
+				<p>a) Fornecendo dicas sobre como jogar as cartas de maneira mais eficiente.</p>
+				<p>b) Exibindo animações e efeitos visuais durante as jogadas.</p>
+				<p>c) Identificando os jogadores por meio de fotos de perfil.</p>
+				<p>d) Simulando a disposição física das cartas no tabuleiro.</p>
+
 			<p>5. Quais são os possíveis benefícios do programa de reconhecimento de cartas?</p>
- 				<p>Redução da variedade de formatos de jogo.</p>
- 				<p>Aumento da frustração dos jogadores devido a bugs.</p>
- 				<p>Aumento da imersão, evitando a necessidade de identificar manualmente as cartas.</p>
-				<p> Diminuição da necessidade de estratégias durante as partidas.</p>
+ 				<p>a) Redução da variedade de formatos de jogo.</p>
+ 				<p>b) Aumento da frustração dos jogadores devido a bugs.</p>
+ 				<p>c) Aumento da imersão, evitando a necessidade de identificar manualmente as cartas.</p>
+				<p>d) Diminuição da necessidade de estratégias durante as partidas.</p>
 
 
 	  	<h1>Questionário de Feedback</h1>
