--- a/project/parte4/SPV_application_quiz.html
+++ b/project/parte4/SPV_application_quiz.html
@@ -14,35 +14,36 @@
 
 		<h1>Questionário Avaliativo (AQA)</h1>
 
-			<p>1. Qual é o objetivo principal do programa de reconhecimento de cartas desenvolvido para o jogo 
-				Magic: The Gathering? </p>
+			<p><b>1. Qual é o objetivo principal do programa de reconhecimento de cartas desenvolvido para o jogo 
+				Magic: The Gathering?</b></p>
  				<p>a) Facilitar a troca de cartas entre jogadores.</p>
  				<p>b) Proporcionar uma experiência física do jogo Magic: The Gathering online.</p>
  				<p>c) Identificar as cartas utilizadas nas partidas online de forma efetiva e satisfatória.</p>
  				<p>d) Ajudar na criação de decks personalizados.</p>
 
-			<p>2. Como o programa de reconhecimento de cartas contribui para a integridade do jogo e evita trapaças?</p>
+			<p><b>2. Como o programa de reconhecimento de cartas contribui para a integridade do jogo e evita 
+				trapaças?</b></p>
  				<p>a) Permite que os jogadores enviem mensagens secretas para seus oponentes.</p>
  				<p>b) Garante que os jogadores tenham acesso a informações detalhadas sobre seus oponentes.</p>
  				<p>c) Identifica automaticamente as cartas no tabuleiro, eliminando a necessidade de comunicação 
 					verbal sobre as jogadas.</p>
  				<p>d) Fornece um modo de jogo offline para evitar conexões de internet instáveis.</p>
 
-			<p>3. Qual é a principal vantagem de utilizar o programa de reconhecimento de cartas em comparação com a 
-				identificação manual das cartas?</p>
+			<p><b>3. Qual é a principal vantagem de utilizar o programa de reconhecimento de cartas em comparação com a 
+				identificação manual das cartas?</b></p>
  				<p>a) Maior complexidade nas estratégias do jogo.</p>
 				<p>b) Aumento da interação física com as cartas.</p>
 				<p>c) Possibilidade de modificar as regras do jogo.</p>
 				<p>d) Agilidade na identificação das cartas, minimizando erros de interpretação.</p>
 
-			<p>4. Como o programa de reconhecimento de cartas contribui para a imersão dos jogadores nas partidas 
-				online?</p>
+			<p><b>4. Como o programa de reconhecimento de cartas contribui para a imersão dos jogadores nas partidas 
+				online?</b></p>
 				<p>a) Fornecendo dicas sobre como jogar as cartas de maneira mais eficiente.</p>
 				<p>b) Exibindo animações e efeitos visuais durante as jogadas.</p>
 				<p>c) Identificando os jogadores por meio de fotos de perfil.</p>
 				<p>d) Simulando a disposição física das cartas no tabuleiro.</p>
 
-			<p>5. Quais são os possíveis benefícios do programa de reconhecimento de cartas?</p>
+			<p><b>5. Quais são os possíveis benefícios do programa de reconhecimento de cartas?</b></p>
  				<p>a) Redução da variedade de formatos de jogo.</p>
  				<p>b) Aumento da frustração dos jogadores devido a bugs.</p>
  				<p>c) Aumento da imersão, evitando a necessidade de identificar manualmente as cartas.</p>
