--- a/project/parte4/SPV_application_quiz.html
+++ b/project/parte4/SPV_application_quiz.html
@@ -51,6 +51,30 @@
  				<p>c) Aumento da imersão, evitando a necessidade de identificar manualmente as cartas.</p>
 				<p>d) Diminuição da necessidade de estratégias durante as partidas.</p>
 
+			<p><b>6. Qual a ordem das etapas de reconhecimento de uma carta?</b></p>
+ 				<p>a) Detecção de Clique -> Recorte da área da carta -> Preprocessamento -> Comparação com o Banco de Dados .</p>
+ 				<p>b) Detecção de Clique -> Preprocessamento -> Recorte da área da carta -> Comparação com o Banco de Dados.</p>
+ 				<p>c) Comparação com o Banco De dados ->  Preprocessamento -> Detecção de Clique  -> Recorte da área da carta.</p>
+				<p>d) Detecção de Clique -> Recorte da área da carta -> Melhora da qualidade de imagem por IA -> Comparação com o Banco de Dados.</p>
+
+			<p><b>7. Quais são os 2 métodos usados no programa para comparação de cartas?</b></p>
+ 				<p>a) Hash e Comparação de Histograma</p>
+ 				<p>b) Comparação de Histograma e comparação Pixel a Pixel</p>
+ 				<p>c) Hash e Sift</p>
+				<p>d) Sift e Comparação Pixel a Pixel</p>
+		
+			<p><b>8. Como a carta é separada do fundo?</b></p>
+ 				<p>a) Binarização</p>
+ 				<p>b) Canny </p>
+ 				<p>c) Photoshop</p>
+				<p>d) Otsu</p>
+
+			<p><b>9. Qual biblioteca é usada para renderizar a interface gráfica do programa?</b></p>
+ 				<p>a) OpenCV</p>
+ 				<p>b) Qt </p>
+ 				<p>c) Tkinter</p>
+				<p>d) Gtk</p>
+
 
 	  	<h1>Questionário de Feedback</h1>
 
