--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 			<a href=project/context/application_context.html> Contexto</a> <br>
 			<a href=project/plan/plan.html> Modelagem Funcional</a> <br>
 			<a href=project/parte4/SPV_application_quiz.html> Aplicação do SPV e Questionário Avaliativo</a> <br>
+			<a href=project/relatorio/relatorio.html> Relatório</a> <br>
 			
 
 			<br>
