--- a/project/relatorio/relatorio.html
+++ b/project/relatorio/relatorio.html
@@ -1,7 +1,15 @@
 <html>
   <head>
-    <title>UNIVERSIDADE FEDERAL DO ABC</title>
-  </head>
+  	<title>Processamento de Vídeo - Relatório</title>
+	<style>
+h1 {text-align: center;}
+
+h2 {text-align: center;}
+
+h3 {text-align: right;}
+	</style>
+</head>
+    
 	<body>
 		
 	
