--- a/project/relatorio/relatorio.html
+++ b/project/relatorio/relatorio.html
@@ -11,11 +11,11 @@ h3 {text-align: right;}
 </head>
     
 	<body>
-		<h1>UNIVERSIDADE FEDERAL DO ABC (center)</h1>
-		<h2>Trabalho de Vídeo T1 - Identificação de Cartas de Magic (center)</h2>
-		<h3>Anthony (right)</h3>
-		<h3>Fernando (right)</h3>
-		<h3>Fernando Hiroaki Suzuki RA: 11202130281 (right)</h3>
-		<h3>Leonardo (right)</h3>
+		<h1>UNIVERSIDADE FEDERAL DO ABC</h1>
+		<h2>Trabalho de Vídeo T1 - Identificação de Cartas de Magic</h2>
+		<h3>Anthony</h3>
+		<h3>Fernando</h3>
+		<h3>Fernando Hiroaki Suzuki RA: 11202130281</h3>
+		<h3>Leonardo</h3>
 	</body>
 </html>
