--- a/project/relatorio/relatorio.html
+++ b/project/relatorio/relatorio.html
@@ -15,7 +15,7 @@ h3 {text-align: right;}
 		<h2>Trabalho de Vídeo T1 - Identificação de Cartas de Magic</h2>
 		<h3>Anthony</h3>
 		<h3>Fernando</h3>
-		<h3>Fernando Hiroaki Suzuki RA: 11202130281</h3>
+		<h3>Fernando Hiroaki Suzuki - RA: 11202130281</h3>
 		<h3>Leonardo</h3>
 	</body>
 </html>
