--- a/project/relatorio/relatorio.html
+++ b/project/relatorio/relatorio.html
@@ -13,9 +13,9 @@ h3 {text-align: right;}
 	<body>
 		<h1>UNIVERSIDADE FEDERAL DO ABC</h1>
 		<h2>Trabalho de Vídeo T1 - Identificação de Cartas de Magic</h2>
-		<h3>Anthony</h3>
-		<h3>Fernando</h3>
+		<h3>Anthony Hlebania</h3>
+		<h3>Fernando Astolfo Dos Santos</h3>
 		<h3>Fernando Hiroaki Suzuki - RA: 11202130281</h3>
-		<h3>Leonardo</h3>
+		<h3>Leonardo Di Credico</h3>
 	</body>
 </html>
