--- a/project/relatorio/relatorio.html
+++ b/project/relatorio/relatorio.html
@@ -6,10 +6,10 @@
 	<body>
 		<h1>UNIVERSIDADE FEDERAL DO ABC</h1>
 		<h2>Trabalho de Vídeo T1 - Identificação de Cartas de Magic</h2>
-		<h3>Anthony Hlebania</h3>
-		<h3>Fernando Astolfo Dos Santos</h3>
-		<h3>Fernando Hiroaki Suzuki - RA: 11202130281</h3>
-		<h3>Leonardo Di Credico</h3>
+		<p>Anthony Hlebania</p>
+		<p>Fernando Astolfo Dos Santos</p>
+		<p>Fernando Hiroaki Suzuki - RA: 11202130281</p>
+		<p>Leonardo Di Credico</p>
 
 		<h2>Introdução</h2>
 		
