--- a/project/relatorio/relatorio.html
+++ b/project/relatorio/relatorio.html
@@ -42,6 +42,11 @@
 		<p>Diante disso, o projeto do Grupo Crakehall Boars consiste em desenvolver um programa que consiga 
 			replicar a identificação de cartas que o já consolidado site "Spelltable" realiza nas partidas de 
 			Magic: The Gathering.</p>
+
+		<p>Com relação aos objetivos, nosso projeto tem como um deles, a criação desse programa que consiga
+		realizar a identificação das cartas de Magic utilizadas nas partidas online. Mas além disso, o objetivo
+		principal é utilizar os conceitos vistos na disciplina de Processamento de Vídeo para o desenvolvimento 
+		de um projeto que possa atender demandas reais do nosso cotidiano.</p>
 		
 	</body>
 </html>
