--- a/project/relatorio/relatorio.html
+++ b/project/relatorio/relatorio.html
@@ -11,7 +11,7 @@
 		<p>Fernando Hiroaki Suzuki - RA: 11202130281</p>
 		<p>Leonardo Di Credico</p>
 
-		<h2>Introdução</h2>
+		<h2>1. Introdução</h2>
 		
 		<p>Magic: The Gathering (MTG) é um jogo de cartas colecionáveis lançado em 1993 pela Wizards of the Coast. 
 		O objetivo do jogo é derrotar o oponente reduzindo sua vida a zero ou por meio de condições de 
@@ -47,6 +47,22 @@
 		realizar a identificação das cartas de Magic utilizadas nas partidas online. Mas além disso, o objetivo
 		principal é utilizar os conceitos vistos na disciplina de Processamento de Vídeo para o desenvolvimento 
 		de um projeto que possa atender demandas reais do nosso cotidiano.</p>
+
+		<h2>2. Materiais e Métodos</h2>
+
+		<h3>2.1. Cenário de Aplicação (CA)</h3>
+
+		<h3>2.2. Modelagem Funcional do Sistema de Processamento Visual (MFS)</h3>
+
+		<h3>2.3. Cronograma efetivo do desenvolvimento do SPV</h3>
+
+		<h3>2.4. Aplicação do SPV</h3>
+
+		<h3>2.5. Análise técnica</h3>
+
+		<h3>2.6. Lista dos arquivos</h3>
+
+		<h3>2.7. Análise dos Resultados do Teste de Campo TCS</h3>
 		
 	</body>
 </html>
