--- a/project/relatorio/relatorio.html
+++ b/project/relatorio/relatorio.html
@@ -63,6 +63,12 @@
 		<h3>2.6. Lista dos arquivos</h3>
 
 		<h3>2.7. Análise dos Resultados do Teste de Campo TCS</h3>
+
+		<h2>3. Conclusão</h2>
+
+		<h2>4. Referências Bibliográficas</h2>
+
+		<h2>5. Anexo</h2>
 		
 	</body>
 </html>
