--- a/project/relatorio/relatorio.html
+++ b/project/relatorio/relatorio.html
@@ -84,6 +84,16 @@
 
 		<h3>2.7. Análise dos Resultados do Teste de Campo TCS</h3>
 
+		<p>Com relação ao Teste de Campo, os usuários foram convidados a testar o programa desenvolvido pelo grupo. Para isso, deixamos a estrutura de apoio da webcam montada e as 
+			instruções com o passo a passo para que o usuário, mesmo que leigo, conseguisse abrir o programa e testá-lo. O usuário utilizava o programa até que estivesse satisfeito com
+			os testes.</p>
+
+		<p> Após a etapa de teste do programa, o usuário era convidado a responder dois questionários, um deles era o Questionário Avaliativo (AQA), que tinha como objetivo, avaliar o 
+			usuário, verificando se o mesmo tinha entendido a proposta do programa e suas funcionalidades. O outro questionário tinha como objetivo o forncecimento de feedback dos 
+			usuários com relação ao programa, perguntando como foi a experiência do usuário e que tipo de melhorias eram necessárias.</p>
+
+		<p></p>
+
 		<h2>3. Conclusão</h2>
 
 		<h2>4. Referências Bibliográficas</h2>
