--- a/project/relatorio/relatorio.html
+++ b/project/relatorio/relatorio.html
@@ -90,9 +90,11 @@
 
 		<p> Após a etapa de teste do programa, o usuário era convidado a responder dois questionários, um deles era o Questionário Avaliativo (AQA), que tinha como objetivo, avaliar o 
 			usuário, verificando se o mesmo tinha entendido a proposta do programa e suas funcionalidades. O outro questionário tinha como objetivo o forncecimento de feedback dos 
-			usuários com relação ao programa, perguntando como foi a experiência do usuário e que tipo de melhorias eram necessárias.</p>
+			usuários com relação ao programa, perguntando como foi a experiência do usuário e que tipo de alterações eram interessantes para a melhora do programa.</p>
 
-		<p></p>
+		<p>Questionário Avaliativo (AQA)</p>
+
+		<p>Questionário de Feedback</p>
 
 		<h2>3. Conclusão</h2>
 
