--- a/project/relatorio/relatorio.html
+++ b/project/relatorio/relatorio.html
@@ -92,7 +92,7 @@
 			usuário, verificando se o mesmo tinha entendido a proposta do programa e suas funcionalidades. O outro questionário tinha como objetivo o forncecimento de feedback dos 
 			usuários com relação ao programa, perguntando como foi a experiência do usuário e que tipo de alterações eram interessantes para a melhora do programa.</p>
 
-		<a href=project/parte4/SPV_application_quiz.html> Instruções e os questionários</a> <br>
+		<a href=project/parte4/SPV_application_quiz.html> Instruções e Questionários</a> <br>
 
 		<h2>3. Conclusão</h2>
 
