--- a/project/relatorio/relatorio.html
+++ b/project/relatorio/relatorio.html
@@ -88,9 +88,11 @@
 			instruções com o passo a passo para que o usuário, mesmo que leigo, conseguisse abrir o programa e testá-lo. O usuário utilizava o programa até que estivesse satisfeito com
 			os testes.</p>
 
-		<p> Após a etapa de teste do programa, o usuário era convidado a responder dois questionários, um deles era o Questionário Avaliativo (AQA), que tinha como objetivo, avaliar o 
+		<p>Após a etapa de teste do programa, o usuário era convidado a responder dois questionários, um deles era o Questionário Avaliativo (AQA), que tinha como objetivo, avaliar o 
 			usuário, verificando se o mesmo tinha entendido a proposta do programa e suas funcionalidades. O outro questionário tinha como objetivo o forncecimento de feedback dos 
 			usuários com relação ao programa, perguntando como foi a experiência do usuário e que tipo de alterações eram interessantes para a melhora do programa.</p>
+
+		<p>No Questionário Avaliativo, utilizamos como critério de avaliação</p>
 
 		<a href=project/parte4/SPV_application_quiz.html> Instruções e Questionários</a> <br>
 
