--- a/project/relatorio/relatorio.html
+++ b/project/relatorio/relatorio.html
@@ -94,7 +94,7 @@
 
 		<p>No Questionário Avaliativo, utilizamos como critério de avaliação</p>
 
-		<a href=project/parte4/SPV_application_quiz.html> Instruções e Questionários</a> <br>
+		<a href="https://crakehallboars.github.io/project/parte4/SPV_application_quiz.html"> Instruções e Questionários</a> <br>
 
 		<h2>3. Conclusão</h2>
 
