--- a/project/relatorio/relatorio.html
+++ b/project/relatorio/relatorio.html
@@ -92,7 +92,21 @@
 			usuário, verificando se o mesmo tinha entendido a proposta do programa e suas funcionalidades. O outro questionário tinha como objetivo o forncecimento de feedback dos 
 			usuários com relação ao programa, perguntando como foi a experiência do usuário e que tipo de alterações eram interessantes para a melhora do programa.</p>
 
-		<p>No Questionário Avaliativo, utilizamos como critério de avaliação</p>
+		<p>No Questionário Avaliativo, utilizamos critérios de avaliação que abrangem aspectos como usabilidade, funcionalidade e impacto na jogabilidade. Abaixo, explicamos detalhadamente 
+			os critérios utilizados nesta avaliação:</p>
+
+		<p>1. Objetivo Principal: Avalia se você entende claramente qual é o objetivo fundamental do programa de reconhecimento de cartas no contexto do jogo Magic: The Gathering. Isso 
+			abrange sua compreensão sobre como o programa melhora a jogabilidade e a interação entre os jogadores.</p>
+		<p>2. Benefícios do Reconhecimento Automático: Verifica se você compreende os benefícios práticos de usar o programa para identificar automaticamente as cartas no tabuleiro, em 
+			comparação com a identificação manual. Isso envolve sua percepção sobre como o programa pode agilizar e enriquecer sua experiência de jogo.</p>
+		<p>3. Contribuição para a Imersão: Avalia se você entende como o programa de reconhecimento de cartas contribui para uma experiência mais imersiva, semelhante à versão física do 
+			jogo. Isso inclui sua compreensão sobre como o programa simula a disposição das cartas e ações durante a partida.</p>
+		<p>4. Evitando Trapaças e Erros: Verifica se você reconhece a importância do programa na garantia da integridade do jogo e na prevenção de trapaças. Isso abrange sua percepção sobre 
+			como o programa cria uma representação visual confiável das ações dos jogadores.</p>
+		<p>5. Simplicidade de Uso: Avalia se você entende a facilidade de uso do programa e como ele simplifica o processo de identificação de cartas, eliminando a necessidade de comunicação 
+			verbal detalhada entre os jogadores.</p>
+		<p>6. Compatibilidade com a Experiência Física: Verifica se você compreende como o programa busca replicar a experiência física do jogo, permitindo que você utilize seu baralho real 
+			durante as partidas online.</p>
 
 		<a href="https://crakehallboars.github.io/project/parte4/SPV_application_quiz.html"> Instruções e Questionários</a> <br>
 
